--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
     <link rel="apple-touch-icon" sizes="76x76" href="https://mundana.bootmb.com/assets/img/favicon.ico">
@@ -88,12 +88,14 @@ HEADER
 <!--------------------------------------
 MAIN
 --------------------------------------->
+<div id="show">
 
+</div>
 <div class="container pt-4 pb-4">
     <div class="row">
         <div class="col-lg-6">
             <div class="card border-0 mb-4 box-shadow h-xl-300">
-                <div style="background-image: url(./assets/img/demo/1.jpg); height: 150px;    background-size: cover;    background-repeat: no-repeat;"></div>
+                <div style="background-image: url(https://mundana.bootmb.com/assets/img/demo/1.jpg); height: 150px;    background-size: cover;    background-repeat: no-repeat;"></div>
                 <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                     <h2 class="h4 font-weight-bold">
                         <a class="text-dark" href="./article.html">Brain Stimulation Relieves Depression Symptoms</a>
@@ -110,35 +112,11 @@ MAIN
         </div>
         <div class="col-lg-6">
             <div class="flex-md-row mb-4 box-shadow h-xl-300">
-                <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="https://mundana.bootmb.com/assets/img/demo/blog4.jpg">
+                <div class="mb-3 d-flex align-items-center" th:each="shop:${shop}" th:if="${shopStat.index} lt 3">
+                    <img height="80" th:src="${shop.getImg()}">
                     <div class="pl-3">
                         <h2 class="mb-2 h6 font-weight-bold">
-                            <a class="text-dark" href="https://mundana.bootmb.com/article.html">Nasa's IceSat space laser makes height maps of Earth</a>
-                        </h2>
-                        <div class="card-text text-muted small">
-                            Jake Bittle in LOVE/HATE
-                        </div>
-                        <small class="text-muted">Dec 12 &middot; 5 min read</small>
-                    </div>
-                </div>
-                <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="https://mundana.bootmb.com/assets/img/demo/blog5.jpg">
-                    <div class="pl-3">
-                        <h2 class="mb-2 h6 font-weight-bold">
-                            <a class="text-dark" href="https://mundana.bootmb.com/article.html">Underwater museum brings hope to Lake Titicaca</a>
-                        </h2>
-                        <div class="card-text text-muted small">
-                            Jake Bittle in LOVE/HATE
-                        </div>
-                        <small class="text-muted">Dec 12 &middot; 5 min read</small>
-                    </div>
-                </div>
-                <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="https://mundana.bootmb.com/assets/img/demo/blog6.jpg">
-                    <div class="pl-3">
-                        <h2 class="mb-2 h6 font-weight-bold">
-                            <a class="text-dark" href="https://mundana.bootmb.com/article.html">Sun-skimming probe starts calling home</a>
+                            <a class="text-dark" href="https://mundana.bootmb.com/article.html" th:text="${shop.getName()}">Nasa's IceSat space laser makes height maps of Earth</a>
                         </h2>
                         <div class="card-text text-muted small">
                             Jake Bittle in LOVE/HATE
@@ -275,5 +253,6 @@ JAVASCRIPTS
 <script src="https://mundana.bootmb.com/assets/js/vendor/popper.min.js" type="text/javascript"></script>
 <script src="https://mundana.bootmb.com/assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
 <script src="https://mundana.bootmb.com/assets/js/functions.js" type="text/javascript"></script>
+<script src="js/index_main.js"></script>
 </body>
 </html>
