--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,16 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>登录</title>
-  <link rel="stylesheet" href="css/login.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto、Jacob Thornton 以及众多 Bootstrap 贡献者">
+  <meta name="generator" content="Hugo 0.91.2">
+  <title>请先登录</title>
+  <link rel="canonical" href="https://v4.bootcss.com/docs/examples/sign-in/">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+<!--  <link rel="manifest" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/manifest.json">-->
+  <link rel="mask-icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
+  <link rel="icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/favicon.ico">
+
+  <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+  <meta name="msapplication-config" content="https://v4.bootcss.com/docs/4.6/assets/img/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#563d7c">
+
+
+
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
+
+  <!-- Custom styles for this template -->
+  <link href="https://v4.bootcss.com/docs/examples/sign-in/signin.css" rel="stylesheet">
 </head>
-<body>
-  <div id="login">
-    <div id="log-box">
+<body class="text-center">
 
-    </div>
+<span class="form-signin" >
+  <img class="mb-4" src="https://v4.bootcss.com/docs/4.6/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  <h1 class="h3 mb-3 font-weight-normal">请登录</h1>
+  <label for="username" class="sr-only">用户名</label>
+  <input type="text" id="username" class="form-control" placeholder="用户名" required autofocus>
+  <label for="password" class="sr-only">密码</label>
+  <input type="password" id="password" class="form-control" placeholder="密码" required>
+  <div class="checkbox mb-3">
+    <label>
+      <input type="checkbox" value="remember-me"> 记住我
+    </label>
   </div>
+  <button class="btn btn-lg btn-primary btn-block" onclick="login()">登录</button>
+  <p class="mt-5 mb-3 text-muted">&copy; 2017-2022</p>
+</span>
 </body>
+<script type="text/javascript" th:src="@{jquery/jquery-3.2.1.min.js}"></script>
+<script>
 
+  function login() {
+    $.ajax({
+      type: "POST",
+      url: "/user/login",
+      dataType: "JSON",
+      data: {username: $("#username").val(),password:$("#password").val()},
+      success: function (res) {
+        console.log(res)
+      }
+    })
+  }
+</script>
 </html>
