--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -3,31 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-p1KAotb3W9ndluCsqePPYnjRm3c6abdnIjo0tQwYUv83VsbsYd43RuofnFAaDo0E" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-E5Sj1saJVFNzWWK3YIJB4LEDEEVEGaOdfmCprPDkfWUo+xkb6Ep52Q1TMEtgcFwi" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" type="javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" type="javascript"></script>
+    <style>
+        body{
+            background: #e2edff;
+        }
+        .col{
+            margin:1px;
+            background: white;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <div class="row">
+    <div class="row" style="height: 300px">
         <div class="col">
-            1 of 2
-        </div>
-        <div class="col">
-            2 of 2
+            商家信息
         </div>
     </div>
     <div class="row">
         <div class="col">
-            1 of 3
-        </div>
-        <div class="col">
-            2 of 3
-        </div>
-        <div class="col">
-            3 of 3
+            评论
         </div>
     </div>
 </div>
+<script>
+    function getParameter(parName) {
+        var str=parName.toLowerCase()+"=";
+        var gvalue="";
+        var HREF=location.href;
+        var upperHREF=location.href.toLowerCase();
+        if(upperHREF.indexOf(str)>0) {
+            gvalue=HREF.substring(upperHREF.indexOf(str)+str.length,upperHREF.length);
+            if(gvalue.indexOf('&')>0)gvalue=gvalue.substring(0,gvalue.indexOf('&'));
+            if(gvalue.indexOf("#")>0)gvalue=gvalue.split("#")[0];
+        }
+        return gvalue;
+    }
+    console.log(getParameter("id"));
+</script>
 </body>
 </html>
