--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://mundana.bootmb.com/assets/js/vendor/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" type="javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" type="javascript"></script>
     <style>
@@ -14,18 +15,37 @@
             margin:1px;
             background: white;
         }
+        p{
+            display:inline-block;
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="row" style="height: 300px">
         <div class="col">
-            商家信息
+            <div style="float: right">
+                <img id="showImg" src="#">
+            </div>
+            <h1 id="shopName"></h1><br>
+            <div id="information">
+                <div id="star" style="display:inline-block"></div>
+
+            </div>
+            <div id="address">
+
+            </div>
+            <div id="openHours">
+
+            </div>
+
         </div>
     </div>
     <div class="row">
         <div class="col">
-            评论
+            <div id="username">用户名</div>
+            <div id="reply">用户评论</div>
+            <div><img src="img/user/1/reply_img1.jpg" style="height: 100px;width: 100px"></div>
         </div>
     </div>
 </div>
@@ -42,7 +62,30 @@
         }
         return gvalue;
     }
-    console.log(getParameter("id"));
+    $.ajax({
+        type:"POST",
+        url:"http://localhost:8080/shop/getShopAll",
+        data:{id:getParameter("id")},
+        success:function (result){
+            $("#shopName").text(result[0]["name"])
+            $("#showImg").attr("src",result[0]["img"])
+            for (let i = 1;i <= parseInt(result[0]["score"]);i++){
+                $("#star").append('<embed id="embedSvg" type="image/svg+xml" src="img/svg/star-fill.svg">');
+            }
+            $("#information").append("<p>"+result[0]["avgScore"]+"</p>")
+            $("#information").append("<p style='margin-left: 50px'>销量："+result[0]["sold"]+"</p>")
+            $("#address").append("地址："+result[0]["address"])
+            $("#openHours").append("营业时间："+result[0]["open_hours"])
+        }
+    })
+    $.ajax({
+        type:"GET",
+        url:"http://localhost:8080/comments/"+getParameter("id"),
+        data:{id:getParameter("id")},
+        success:function (result){
+            console.log(result);
+        }
+    })
 </script>
 </body>
 </html>
