--- a/src/main/resources/templates/sign.html
+++ b/src/main/resources/templates/sign.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<!--  <link rel="manifest" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/manifest.json">-->
+  <!--  <link rel="manifest" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/manifest.json">-->
   <link rel="mask-icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
   <link rel="icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/favicon.ico">
 
@@ -50,18 +50,19 @@
 
 <span class="form-signin" >
   <img class="mb-4" src="https://v4.bootcss.com/docs/4.6/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-  <h1 class="h3 mb-3 font-weight-normal">请登录</h1>
+  <h1 class="h3 mb-3 font-weight-normal">注册</h1>
   <label for="username" class="sr-only">用户名</label>
   <input type="text" id="username" class="form-control" placeholder="用户名" required autofocus>
   <label for="password" class="sr-only">密码</label>
-  <input type="password" id="password" class="form-control" placeholder="密码" required>
+  <input type="password" id="password" class="form-control" placeholder="密码"   minlength="3" required>
   <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> 记住我
-    </label>
+<!--    <label>-->
+<!--      <input type="checkbox" value="remember-me"> 记住我-->
+<!--    </label>-->
   </div>
-  <button class="btn btn-lg btn-primary btn-block"  onclick="login()">登录</button>
-  <a class="btn btn-lg btn-primary btn-block" href="/sign">注册</a>
+<!--  <button class="btn btn-lg btn-primary btn-block"  onclick="login()">登录</button>-->
+<!--  <a class="btn btn-lg btn-primary btn-block" href="/sign">注册</a>-->
+  <button class="btn btn-lg btn-primary btn-block"   onclick="sign()">注册</button>
   <br>
   <p class="mt-5 mb-3 text-muted">&copy; 大众点评</p>
 </span>
@@ -75,25 +76,25 @@
 
 
 
-  function login() {
+  function sign() {
     $.ajax({
       type: "POST",
-      url: "user/login",
+      url: "user/sign",
       dataType: "JSON",
       data: {username: $("#username").val(),password:$("#password").val()},
       success: function (res) {
         console.log(res)
         // const url = "localhost:8080/"+res.url;
         // window.location = url;
+
+        document.cookie = res.cookie;
         if (res.code == "200"){
-          window.location.href="index";
+          window.location.href="/login";
           window.event.returnValue=false;
-          document.cookie = res.cookie;
+          alert(res.message);
         }else{
-          alert("用户名或密码错误！")
+          alert(res.message)
         }
-
-
       }
     })
   }
