--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -47,6 +47,11 @@
             <div id="reply">用户评论</div>
             <div><img src="img/user/1/reply_img1.jpg" style="height: 100px;width: 100px"></div>
         </div>
+        <div class="col">
+            <div >用户名</div>
+            <div >用户评论</div>
+            <div><img src="img/user/1/reply_img1.jpg" style="height: 100px;width: 100px"></div>
+        </div>
     </div>
 </div>
 <script>
