--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="jquery/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<div th:each="shop1:${shop}">
-    <span th:text="${shop1.getId()}"></span>
-</div>
+    <input type="file" id="input-file">
+    <button onclick="inputFile()">提交</button>
+<script>
+
+    function inputFile() {
+        let formData = new FormData();
+        for(let i = 0;i<$("#input-file")[0].files.length;i++){
+            formData.append("file",$("#input-file")[0].files[i]);
+        }
+        $.ajax({
+            url:"files",
+            data:formData,
+            dataType:"json",
+            type:"POST",
+            contentType:false,
+            processData:false,
+            success:function (result) {
+                console.log(result);
+            }
+        })
+    }
+
+</script>
 </body>
 </html>
