--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -43,13 +43,27 @@
     </div>
     <div class="row">
         <div class="col">
+            <div style="float: left">
+                <textarea cols="80" rows="10" style="resize: none"></textarea>
+            </div>
+            <div style="float: right">
+                <input type="file" multiple>
+                <input type="button" value="点击发表评论">
+            </div>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <div id="username">用户名</div>
             <div id="reply">用户评论</div>
             <div><img src="img/user/1/reply_img1.jpg" style="height: 100px;width: 100px"></div>
         </div>
+    </div>
+    <div class="row">
         <div class="col">
-            <div >用户名</div>
-            <div >用户评论</div>
+            <div>用户名</div>
+            <div>用户评论</div>
             <div><img src="img/user/1/reply_img1.jpg" style="height: 100px;width: 100px"></div>
         </div>
     </div>
