--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,22 +39,15 @@ NAVBAR
                     <a class="nav-link" href="./article.html">Culture</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Tech</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Politics</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Health</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Collections</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="./docs.html">Template <span class="badge badge-secondary">docs</span></a>
+                </li>
+            </ul>
+            <ul>
+                <li class="nav-item">
+                    <input type="text" id="search" style="float: left;width: 200px;" class="form-control" placeholder="请输入字段名">
+                    <span class="input-group-btn nav-item" style="float: right;">
+                        <button class="btn btn-info btn-search" onclick="search()">查找</button>
+                    </span>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
@@ -281,13 +274,24 @@ JAVASCRIPTS
                 document.getElementById("introduction").innerHTML = result[a]["introduction"];
                 document.getElementById("openHours").innerHTML = result[a]["openHours"];
             },5000)
-
-
         }
     })
-
-
-
+    function search() {
+        $.ajax({
+            type:"POST",
+            url:"shop/search",
+            data: {name:$("#search").val()},
+            success:function(response){
+                sessionStorage.setItem("id",response[0].id)
+                console.log(response[0].id)
+                console.log(response);
+                window.location.href="search?id="+response[0].id;
+            },
+            error:function(){
+                console.log(123);
+            }
+        })
+    }
 </script>
 </body>
 </html>
