--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -44,11 +44,12 @@
     <div class="row">
         <div class="col">
             <div style="float: left">
-                <textarea cols="80" rows="10" style="resize: none"></textarea>
+                <textarea cols="80" rows="10" style="resize: none" id="content"></textarea>
             </div>
             <div style="float: right">
-                <input type="file" multiple>
-                <input type="button" value="点击发表评论">
+                <input type="file" id="input-file" multiple><br>
+                <input type="number" id="score" oninput="if(value>5)value=1;if(value<1)value=1" placeholder="请输入1-5之间的分数"><br>
+                <input type="button" onclick="inputFile()"  value="点击发表评论">
             </div>
 
         </div>
@@ -106,6 +107,26 @@
             console.log(result);
         }
     })
+    function inputFile() {
+        let formData = new FormData();
+        for(let i = 0;i<$("#input-file")[0].files.length;i++){
+            formData.append("file",$("#input-file")[0].files[i]);
+        }
+        formData.append("content",$("#content").val());
+        formData.append("score",$("#score").val());
+        formData.append("shopId",getParameter("id"));
+        $.ajax({
+            url:"comments/publish",
+            data:formData,
+            dataType:"json",
+            type:"POST",
+            contentType:false,
+            processData:false,
+            success:function (result) {
+                console.log(result);
+            }
+        })
+    }
 </script>
 </body>
 </html>
