--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,13 +33,13 @@ NAVBAR
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
             <ul class="navbar-nav mr-auto d-flex align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Intro <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index">Intro <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./article.html">Culture</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./docs.html">Template <span class="badge badge-secondary">docs</span></a>
+                    <a class="nav-link" href="./docs.html">分类导航 <span class="badge badge-secondary">docs</span></a>
                 </li>
             </ul>
             <ul>
