--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -5,15 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://mundana.bootmb.com/assets/js/vendor/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" type="javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" type="javascript"></script>
+    <style>
+        .box{
+            width: 80%;
+            margin: 15vh auto;
+        }
+        table{
+            text-align: center;
+        }
+        table th{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<ul></ul>
-<p id="title"></p>
+<div class="box">
+    <table class="table table-striped table-bordered table-hover table-condensed">
+        <thead>
+        <tr>
+            <th>商店id</th>
+            <th>店名</th>
+            <th>菜系</th>
+            <th>地址</th>
+            <th>销量</th>
+            <th>营业时间</th>
+            <th>商店图片</th>
+            <th>商店介绍</th>
+        </tr>
+        </thead>
+        <tbody id="rch">
+        <!--存放数据-->
+        </tbody>
+    </table>
+</div>
 <script>
-    getPargerm();
-function getPargerm(){
-   const id =  sessionStorage.getItem("id");
-   console.log(id)
+    $(document).ready(function () {
+        let key = getParameter("name");
+        let r = $("#rch");
+        let temp = '';
+        let judge = '';
+        console.log(key);
+        $.ajax({
+
+            type: "POST",
+            url: "shop/search",
+            data: {name: key},
+            success: function (response) {
+                let s = response;
+                r.empty();//清空
+                for (let i = 0; i < s.length; i++) {
+                    if (s[i].typedId=='1'){
+                        judge = "川菜";
+                    }else if (s[i].typedId=='2'){
+                        judge = "粤菜";
+                    }else if (s[i].typedId=='3'){
+                        judge = "鲁菜";
+                    }
+                    console.log(judge);
+                    temp +=
+                        '<tr>' +
+                        '<td>' + s[i].id+ '</td>' +
+                        '<td>' + s[i].name + '</td>' +
+                        '<td>' + judge+ '</td>' +
+                        '<td>' + s[i].address + '</td>' +
+                        '<td>' + s[i].sold + '</td>' +
+                        '<td>' + s[i].openHours+ '</td>' +
+                        '<td><img src = ' + s[i].img+'></td>' +
+                        '<td>' + s[i].introduction+ '</td>' +
+                        '</tr>';
+                }
+                r.append(temp);
+            },
+            error: function () {
+                console.log(123);
+            }
+        })
+    })
+function getParameter(parName) {
+    var str=parName.toLowerCase()+"=";
+    var gvalue="";
+    var HREF=decodeURI(location.href);
+    var upperHREF=decodeURI(location.href.toLowerCase());
+    if(upperHREF.indexOf(str)>0) {
+        gvalue=HREF.substring(upperHREF.indexOf(str)+str.length,upperHREF.length);
+        if(gvalue.indexOf('&')>0)gvalue=gvalue.substring(0,gvalue.indexOf('&'));
+        if(gvalue.indexOf("#")>0)gvalue=gvalue.split("#")[0];
+    }
+    return gvalue;
 }
 </script>
 </body>
