--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -71,7 +71,7 @@
                         temp +=
                             '<tr>' +
                             '<td>' + restaurant[j].id+ '</td>' +
-                            '<td>' + restaurant[j].name + '</td>' +
+                            '<td><a href="http://localhost:8080/theShop?id='+restaurant[j].id+'">' + restaurant[j].name + '</a></td>' +
                             '<td>' + judge+ '</td>' +
                             '<td>' + restaurant[j].address + '</td>' +
                             '<td>' + restaurant[j].sold + '</td>' +
