--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -98,7 +98,6 @@
                     for (let k = 5; k > 0; k--) {
                         imgsrc += "/"+index[index.length-k]
                     }
-                    console.log(imgsrc)
                     image +='<img src="'+imgsrc+'" style="height: 100px;width: 100px;margin-right: 10px">'
                 }
                 console.log(result[i])
@@ -132,7 +131,11 @@
             contentType:false,
             processData:false,
             success:function (result) {
-                console.log(result);
+                if (result["code"] == 200){
+                    alert("发表成功")
+                }else{
+                    alert("请登录")
+                }
             }
         })
     }
