--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,10 +65,8 @@ NAVBAR
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
             <ul class="navbar-nav mr-auto d-flex align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index">Intro <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Culture</a>
+                    <a th:if="${usertype ne '2'}" class="nav-link" href="myshop">成为商家</a>
+                    <a th:if="${usertype eq '2'}" class="nav-link" href="#">我的商铺</a>
                 </li>
                 <li class="nav-item">
                     <div class="header">
