--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@ NAVBAR
                 </li>
             </ul>
             <ul>
-                <li class="nav-item">
+                <li class="nav-item" style="list-style: none">
                     <input type="text" id="search" style="float: left;width: 200px;" class="form-control" placeholder="请输入字段名">
                     <span class="input-group-btn nav-item" style="float: right;">
                         <button class="btn btn-info btn-search" onclick="search()">查找</button>
