--- a/src/main/resources/templates/myshop.html
+++ b/src/main/resources/templates/myshop.html
@@ -53,7 +53,8 @@ integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69p
                     contentType:false,
                     processData:false,
                     success:function (result) {
-                        console.log(result);
+                        alert("提交商铺信息成功")
+                        window.location.href="index";
                     }
                 })
             }
